fix MenuItem URL in vertical hierarchical menu

--- a/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
+++ b/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
@@ -16,7 +16,7 @@
                                     <div class="menu_item-titulo">{{ menu_item.name }} <span class="glyphicon glyphicon-triangle-bottom"></span></div>
                                 </a>
                             {% else %}
-                                <a href="{{ menu_item.url }}" role="button">
+                                <a href="/{{ menu_item.url }}" role="button">
                                     <div class="menu_item-titulo">{{ menu_item.name }}
                                 </a>
                             {% endif %}
