--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.css
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.css
@@ -105,11 +105,16 @@ span.category_title a {
   display: inline-block;
   vertical-align: top;
 }
-.teaser_text_container {
-  width: 70%;
-  display: inline-block;
-  float: right;
+
+
+@media (min-width: 768px) {
+    .teaser_text_container {
+        width: 70%;
+        display: inline-block;
+        float: right;
+    }
 }
+
 .teaser_text_container_fullwidth {
   width: 100%;
   margin-top: 5px;
