--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -22,45 +22,52 @@
 
         {% else%}
 
-          {% if current_object.image %}
-              <div class="teaser_icon_container media-content">
-              <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
-                <img class="teaser_icon img-responsive" src="{% version current_object.image.path 'thumbnail' %}" alt="{{ current_object.name }}" />
-              </a>
-            </div>
-          {% endif %}
+            {% if current_object.image %}
+                <div class="teaser_icon_container media-content hidden-xs">
+                    <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
+                      <img class="teaser_icon img-responsive" src="{% version current_object.image.path 'medium' %}" alt="{{ current_object.name }}" />
+                    </a>
+                </div>
+            {% endif %}
 
             <div class="teaser_text_container{% if article.pictures.values.count == 0 %}_fullwidth{% endif %}">
 
                 <div class="pretitle-container first meta-content">
-                  <div class="date">
-                      {{ current_object.creation_date|date:'SHORT_DATE_FORMAT' }}
-                  </div>
+                    <div class="date">
+                        {{ current_object.creation_date|date:'SHORT_DATE_FORMAT' }}
+                    </div>
                 </div>
 
-              <h2 class="title">
+                <h2 class="title">
                     <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
-              </h2>
+                </h2>
 
+                {% if current_object.description %}
+                    <div class="html-content summary">{{ current_object.description|smart_style }}
+                    {% block player %}
+                    {% endblock player %}
+                 </div>
+                {% endif %}
 
+                {% include "cyclope/author_block_teaser.html" with author=current_object.author %}
 
-                    {% if current_object.description %}
-                        <div class="html-content summary">{{ current_object.description|smart_style }}
-                        {% block player %}
-                        {% endblock player %}
-                     </div>
-                     {% endif %}
+                {% if current_object.image %}
+    			<div class="visible-xs-block">
+    			    <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
+                      <img class="teaser_icon img-responsive" src="{% version current_object.image.path 'medium' %}" alt="{{ current_object.name }}" />
+                    </a>
+			    </div>
+			    {% endif %}
 
-                    {% include "cyclope/author_block_teaser.html" with author=current_object.author %}
-                    <p class="teaser_more center-block">
-                        <a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">
-                            {% trans "More" %}
-                        </a>
-                        {% include "cyclope/teaser_tools_block.html" with current_object=current_object %}
-                        {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-                            <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
-                        {% endif %}
-                    </p>
+                <p class="teaser_more center-block">
+                    <a class="btn btn-primary" href="{{ current_object.get_absolute_url  }}" role="button">
+                        {% trans "More" %}
+                    </a>
+                    {% include "cyclope/teaser_tools_block.html" with current_object=current_object %}
+                    {% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
+                        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />
+                    {% endif %}
+                </p>
 
             </div>
         <div class="clear"></div>
