why would we want a gray background on the frontend admin? leaving empty file in case we wanted to style this differently indeed
idem

--- a/cyclope/static/css/admin_tools_theming.css
+++ b/cyclope/static/css/admin_tools_theming.css
@@ -3,7 +3,7 @@
  *
  */
 body {}
-body.frontend_admin {margin: 20px 65px;}
+body.frontend_admin {} /*style frontend admin body here*/
 #content {margin:10px auto;width:960px;}
 #header {
     /* background: url(/static/admin_tools/images/admin-tools.png) 0 0 repeat-x; */
