--- a/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
+++ b/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
@@ -35,7 +35,7 @@
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{% trans "Add content" %} <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                     {% for c_type in category.collection.content_types.all %}
-                        <li><a href="/admin/{{ c_type.app_label }}/{{ c_type.model }}/add?_frontend=1&_popup=1&_from_category={{category.slug}}" class="add_content add_{{ c_type.model }}">{{ c_type.name.capitalize }}</a></li>
+                        <li><a href="/admin/{{ c_type.app_label }}/{{ c_type.model }}/add?_frontend=1&_from_category={{category.slug}}" class="add_content add_{{ c_type.model }}">{{ c_type.name.capitalize }}</a></li>
                     {% endfor %}
                     </ul>
             </div>
