--- a/cyclope/templates/cyclope/content_tools_block.html
+++ b/cyclope/templates/cyclope/content_tools_block.html
@@ -41,7 +41,7 @@
       {% per_category_perms current_object as cat_perms %}
       {% if cat_perms.edit_content %}
       <li>
-        <a href="/admin/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{current_object.pk }}?_frontend=1&_popup=1" class="edit_link">
+        <a href="/admin/{{ current_object.get_app_label }}/{{ current_object.get_object_name }}/{{current_object.pk }}?_frontend=1" class="edit_link">
           <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           {% trans "Edit" %}
         </a>
