Add classes labeled_icon_list to image

--- a/cyclope/apps/articles/templates/articles/article_labeled_icon.html
+++ b/cyclope/apps/articles/templates/articles/article_labeled_icon.html
@@ -8,7 +8,7 @@
 					<img class="img-responsive" src="{% version picture.image 'labeled_icon_bootstrap' %}" alt="{{ article.name }}" />
 				{% endwith %}
 			{% else %}
-				<img class="img-responsive" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" alt="not-available" />
+				<img class="img-responsive labeled_icon_list" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" alt="not-available" />
 			{% endif %}
 		</a>
 		<div class="caption">
