Improved the views of media_player

--- a/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
@@ -34,6 +34,10 @@ var loadMedia = function(){
         framesPerSecond: 25,
         // turns keyboard support on and off for this instance
         enableKeyboard: true,
+        audioWidth: 400,
+        // height of audio player
+        audioHeight: 30,
+        
         // when this player starts, it will pause other players
         pauseOtherPlayers: true,
         // array of keyboard commands
