--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
@@ -2,4 +2,7 @@
 
 
 {% block player %}
+    <div class="teaser_icon_container media-content soundtrack-detail">
+		{% include 'medialibrary/media_player.html' %}
+	</div>
 {% endblock %}
