--- a/cyclope/core/collections/templates/collections/category_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/category_teaser_list.html
@@ -1,6 +1,5 @@
 {% extends 'collections/category_contents_base.html' %}
-
-{% load i18n cyclope_utils fb_versions %}
+{% load i18n cyclope_utils %}
 
 {% comment %}
 The content of this view is composed by including a template for each content in the category
