--- a/cyclope/templates/cyclope/breadcrumb_block.html
+++ b/cyclope/templates/cyclope/breadcrumb_block.html
@@ -5,7 +5,7 @@
         {% include 'collections/hierarchycal_navigation_block.html' %}
     {% endif %}
     {% if view_options.show_title %}
-        <li><a href="{% url category-default category.slug %}">{{ category.name }}</a></li>
+        <li><a href="{% url 'category-default' category.slug %}">{{ category.name }}</a></li>
     {% endif %}
     {% if not request.hide_frontend_edit %}
         {% per_category_perms category as cat_perms %}
